[gd_scene load_steps=2 format=3 uid="uid://2ejeqekroxi2"]

[ext_resource type="Script" path="res://Test/SQLController.gd" id="1_57t3f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57t3f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 218.0
offset_right = 654.0
offset_bottom = 406.0
theme_override_constants/separation = 20

[node name="CreateTable" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create Table"

[node name="InsertData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Insert Data
"

[node name="SelectData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Data"

[node name="UpdateData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Update Data"

[node name="DeleteData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Delete Data"

[node name="CustomSelect" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Custom Select"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 769.0
offset_top = 222.0
offset_right = 816.0
offset_bottom = 245.0
text = "Name"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 769.0
offset_top = 291.0
offset_right = 816.0
offset_bottom = 314.0
text = "Score"

[node name="Name" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 850.0
offset_top = 218.0
offset_right = -181.0
offset_bottom = -397.0

[node name="Score" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 850.0
offset_top = 287.0
offset_right = -181.0
offset_bottom = -328.0

[connection signal="pressed" from="VBoxContainer/CreateTable" to="." method="_on_create_table_pressed"]
[connection signal="pressed" from="VBoxContainer/InsertData" to="." method="_on_insert_data_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectData" to="." method="_on_select_data_pressed"]
[connection signal="pressed" from="VBoxContainer/UpdateData" to="." method="_on_update_data_pressed"]
[connection signal="pressed" from="VBoxContainer/DeleteData" to="." method="_on_delete_data_pressed"]
[connection signal="pressed" from="VBoxContainer/CustomSelect" to="." method="_on_custom_select_pressed"]
